[package]
name = "backend"
version = "0.1.0"
authors = ["rileylyman <rileylyman@berkeley.edu>"]

[dependencies]
rocket = "0.4.0"
chrono = "0.4.6"
rocket_contrib = "0.4.0"
serde_derive = "1.0.82"
serde_json = "1.0.33"
serde = "1.0.82"

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]

